Fix our Values on mobile

--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -85,7 +85,7 @@ background-repeat: no-repeat;
 
 
 .value_img_box {
-max-width: 500px;
+max-width: 100%;
 display: block;
 height: 300px;
 object-fit: cover;
